--- a/samochodGUI/pom.xml
+++ b/samochodGUI/pom.xml
@@ -58,7 +58,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.example.samochodgui/com.example.samochodgui.HelloApplication</mainClass>
+              <mainClass>com.example.samochodgui/com.example.samochodgui.SamochodGUIApplication</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
